update hoaDonDetail